Spent all day trying to fix a stupid bug when using both y-overflow and x-overflow. Came up with an acceptable work-around by instead using position: fixed to show displayed tooltip descriptions.

--- a/front-end/distribution/style.css
+++ b/front-end/distribution/style.css
@@ -43,7 +43,6 @@ body {
 
 .friendlyPartyTitle {
   position: absolute;
-  z-index: 1;
   display: flex;
   width: 100%;
   height: 100%;
@@ -56,7 +55,6 @@ body {
 }
 
 .friendlyParty {
-  z-index: 2;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -123,7 +121,6 @@ body {
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-  overflow: auto;
 }
 
 .character {
@@ -292,7 +289,7 @@ body {
 
 /* Character Modal */
 .characterModalBackground {
-  z-index: 3;
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
@@ -302,7 +299,6 @@ body {
 }
 
 .characterModalContainer {
-  z-index: 4;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -314,7 +310,6 @@ body {
 }
 
 .characterModal {
-  z-index: 4;
   position: relative;
   height: 100%;
   width: 100%;
@@ -331,7 +326,6 @@ body {
 }
 
 .characterModalCloseButton {
-  z-index: 5;
   position: absolute;
   height: 4em;
   width: 4em;
@@ -380,7 +374,7 @@ body {
 }
 
 .customScrollBar {
-  overflow: auto;
+  overflow-y: scroll;
 }
 
 .customScrollbar::-webkit-scrollbar {
@@ -486,43 +480,62 @@ body {
 }
 
 .characterModalActionsAndBonusActions {
+  position: relative;
   grid-area: 6/2/11/3;
   padding: 0.25em;
   font-size: 1.2vw;
-  overflow: visible;
 }
 
 /* DisplayActionsBonusActionsReactionsAndFeatures */
-.action {
+.displayContainer {
+  width: 100%;
+
+}
+
+.aBAOrRContainer {
+  width: 100%;
+}
+
+.displayTitle {
+  text-decoration: underline;
+  margin: 1em 0 0.5em;
+  text-align: center;
+}
+
+.aBAOrRList {
+  width: 100%;
+}
+
+.aBAOrR {
   position: relative;
-  display: inline-block;
   cursor: pointer;
   width: 100%;
 }
 
-.actionName {
-  display: inline-block;
+.aBAOrRName {
+  position: relative;
 }
 
-.actionDescription {
+.aBAOrRDescription {
+  display: flex;
+  position: fixed;
   visibility: hidden;
-  width: 30vw;
+  min-height: 37%;
+  width: 17vw;
+  padding: 1em;
+  bottom: 2.5%;
+  right: 50%;
+  text-align: center;
+  align-items: center;
   background-color: #333;
   color: #fff;
-  text-align: center;
-  border-radius: 4px;
-  padding: 5px;
-  position: absolute;
-  z-index: 1;
-  bottom: 100%;
-  left: 50%;
-  transform: translateX(-50%);
+  border-radius: 0.5em;
   opacity: 0;
   transition: opacity 0.3s;
   pointer-events: none;
 }
 
-.action:hover .actionDescription {
+.aBAOrR:hover .aBAOrRDescription {
   visibility: visible;
-  opacity: 1;
+  opacity: 0.95;
 }
